[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/GameIcons/PNG/White/1x/gear.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/AtlantisInternational-jen0.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/GameIcons/PNG/White/1x/cross.png" type="Texture" id=3]
[ext_resource path="res://UI/OptionsInGame.gd" type="Script" id=4]
[ext_resource path="res://Assets/GameIcons/PNG/White/1x/checkmark.png" type="Texture" id=5]
[ext_resource path="res://UI/ScreenDarkener.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/black_options_in_game.theme" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsPanel/VBoxContainer/OptionsLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OptionsPanel/VBoxContainer/MoveControlsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OptionsPanel/VBoxContainer/ScaleControlsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsPanel/VBoxContainer/OptionsLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OptionsPanel/VBoxContainer/MoveControlsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OptionsPanel/VBoxContainer/ScaleControlsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="OptionsInGame" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenDarkener" parent="." instance=ExtResource( 6 )]
margin_left = 0.235962
margin_right = 0.235962

[node name="OptionsButtonPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="OptionsButton" type="TextureButton" parent="OptionsButtonPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 7.0
margin_bottom = 8.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AcceptButtonPanel" type="Panel" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AcceptButton" type="TextureButton" parent="AcceptButtonPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButtonPanel" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CancelButton" type="TextureButton" parent="CancelButtonPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="OptionsPanel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.00393927 )
margin_top = 4.0
margin_right = 160.0
margin_bottom = 21.0
mouse_filter = 0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="MoveControlsButton" type="Button" parent="OptionsPanel/VBoxContainer"]
modulate = Color( 1, 1, 1, -1.88748e-06 )
margin_left = 40.0
margin_top = 29.0
margin_right = 120.0
margin_bottom = 53.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 4
text = "Move Controls"

[node name="ScaleControlsButton" type="Button" parent="OptionsPanel/VBoxContainer"]
modulate = Color( 1, 1, 1, -1.88748e-06 )
margin_left = 40.0
margin_top = 61.0
margin_right = 120.0
margin_bottom = 85.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 4
text = "Scale Controls"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/hide_controls = SubResource( 3 )
anims/show_controls = SubResource( 4 )
[connection signal="pressed" from="OptionsButtonPanel/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="AcceptButtonPanel/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="CancelButtonPanel/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/MoveControlsButton" to="." method="_on_MoveControlsButton_pressed"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/ScaleControlsButton" to="." method="_on_ScaleControlsButton_pressed"]
